whatwedo image links fixed

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="whatwedo list">
                     <li class="whatwedo-item">
-                        <img src="./images/advantages/img-1.jpg" alt="человек пишет код на компьютере" width="370">
+                        <img src="./images/whatwedo/img-1.jpg" alt="человек пишет код на компьютере" width="370">
                     </li>
                     <li class="whatwedo-item">
-                        <img src="./images/advantages/img-2.jpg"
+                        <img src="./images/whatwedo/img-2.jpg"
                             alt="человек с телефоном и ноутбуком тестирует мобильную версию продукта" width="370">
                     </li>
                     <li class="whatwedo-item">
-                        <img src="./images/advantages/img-3.jpg" alt="человек выбирает цвета из палитры на планшете" width="370">
+                        <img src="./images/whatwedo/img-3.jpg" alt="человек выбирает цвета из палитры на планшете" width="370">
                     </li>
                 </ul>
             </div>
