--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
             <div class="advantages-container container">
                 <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="advantages list">
-                    <li class="advantages-item">
+                    <li class="advantages-item antenna">
                         <h3 class="title">Внимание к деталям</h3>
                         <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item clock">
                         <h3 class="title">Пунктуальность</h3>
                         <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item diagram">
                         <h3 class="title">Планирование</h3>
                         <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item astronaut">
                         <h3 class="title">Современные технологии</h3>
                         <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
