clients section created

--- a/index.html
+++ b/index.html
@@ -132,6 +132,58 @@
             </div>
         </section>
         <!-- TEAM end-->
+
+        <!-- CLIENTS -->
+        <div class="section">
+            <div class="clients-container container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="clients list">
+                    <li class="clients-item">
+                        <a class="clients-icon-link link" href="#">
+                            <svg class="clients-icon">
+                                <use href="./images/sprite.svg#clients-logo-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-icon-link link" href="#">
+                            <svg class="clients-icon">
+                                <use href="./images/sprite.svg#clients-logo-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-icon-link link" href="#">
+                            <svg class="clients-icon">
+                                <use href="./images/sprite.svg#clients-logo-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-icon-link link" href="#">
+                            <svg class="clients-icon">
+                                <use href="./images/sprite.svg#clients-logo-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-icon-link link" href="#">
+                            <svg class="clients-icon">
+                                <use href="./images/sprite.svg#clients-logo-5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-icon-link link" href="#">
+                            <svg class="clients-icon">
+                                <use href="./images/sprite.svg#clients-logo-6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- CLIENTS end -->
     </main>
     <footer class="page-footer">
         <div class="footer-container container">
