--- a/index.html
+++ b/index.html
@@ -31,10 +31,20 @@
             </nav>
             <ul class="contacts list">
                 <li class="contacts-item">
-                    <a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="header-contacts link" href="mailto:info@devstudio.com">
+                        <svg class="contacts-icon envelope">
+                            <use href="./images/sprite.svg#envelope"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
                 </li>
                 <li class="contacts-item">
-                    <a class="header-contacts link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="header-contacts link" href="tel:+380961111111">
+                        <svg class="contacts-icon smartphone">
+                            <use href="./images/sprite.svg#smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
