social icons added

--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
                         <div class="team-description-wrapper">
                             <h3 class="title">Игорь Демьяненко</h3>
                             <p class="position" lang="en">Product Designer</p>
+                            <ul class="social-links list">
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -122,6 +152,36 @@
                         <div class="team-description-wrapper">
                             <h3 class="title">Ольга Репина</h3>
                             <p class="position" lang="en">Frontend Developer</p>
+                            <ul class="social-links list">
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -129,6 +189,36 @@
                         <div class="team-description-wrapper">
                             <h3 class="title">Николай Тарасов</h3>
                             <p class="position" lang="en">Marketing</p>
+                            <ul class="social-links list">
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -136,6 +226,36 @@
                         <div class="team-description-wrapper">
                             <h3 class="title">Михаил Ермаков</h3>
                             <p class="position" lang="en">UI Designer</p>
+                            <ul class="social-links list">
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-links-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-icon">
+                                            <use href="./images/sprite.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
