--- a/portfolio.html
+++ b/portfolio.html
@@ -155,14 +155,49 @@
     </main>
     <footer class="page-footer">
         <div class="footer-container container">
-            <!-- lOGO -->
-            <a class="logo footer-logo link" href="./index.html"><span class="logo-span">Web</span>Studio</a>
-            <!-- lOGO end -->
-            <address class="page-adress">
-                <p class="footer-adress item">г. Киев, пр-т Леси Украинки, 26</p>
-                <a class="footer-contacts link item" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="footer-contacts link item" href="tel:+380961111111">+38 096 111 11 11</a>
-            </address>
+            <div class="footer-wrapper">
+                <!-- lOGO -->
+                <a class="logo footer-logo link" href="./index.html"><span class="logo-span">Web</span>Studio</a>
+                <!-- lOGO end -->
+                <address class="page-adress">
+                    <p class="footer-adress item">г. Киев, пр-т Леси Украинки, 26</p>
+                    <a class="footer-contacts link item" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="footer-contacts link item" href="tel:+380961111111">+38 096 111 11 11</a>
+                </address>
+            </div>
+            <div class="footer-wrapper">
+                <h3 class="title">Присоединяйтесь</h3>
+                <ul class="social-links list">
+                    <li class="social-links-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-icon">
+                                <use href="./images/sprite.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-links-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-icon">
+                                <use href="./images/sprite.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-links-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-icon">
+                                <use href="./images/sprite.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-links-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-icon">
+                                <use href="./images/sprite.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
