--- a/index.html
+++ b/index.html
@@ -270,42 +270,42 @@
                 <ul class="clients list">
                     <li class="clients-item">
                         <a class="clients-icon-link link" href="#">
-                            <svg class="clients-icon">
+                            <svg class="clients-icon company-1">
                                 <use href="./images/sprite.svg#clients-logo-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-icon-link link" href="#">
-                            <svg class="clients-icon">
+                            <svg class="clients-icon company-2">
                                 <use href="./images/sprite.svg#clients-logo-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-icon-link link" href="#">
-                            <svg class="clients-icon">
+                            <svg class="clients-icon company-3">
                                 <use href="./images/sprite.svg#clients-logo-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-icon-link link" href="#">
-                            <svg class="clients-icon">
+                            <svg class="clients-icon company-4">
                                 <use href="./images/sprite.svg#clients-logo-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-icon-link link" href="#">
-                            <svg class="clients-icon">
+                            <svg class="clients-icon company-5">
                                 <use href="./images/sprite.svg#clients-logo-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-icon-link link" href="#">
-                            <svg class="clients-icon">
+                            <svg class="clients-icon company-6">
                                 <use href="./images/sprite.svg#clients-logo-6"></use>
                             </svg>
                         </a>
