border for project items updated

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <!-- TEAM end-->
 
         <!-- CLIENTS -->
-        <div class="section">
+        <section class="section">
             <div class="clients-container container">
                 <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="clients list">
@@ -312,7 +312,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </section>
         <!-- CLIENTS end -->
     </main>
     <footer class="page-footer">
@@ -328,7 +328,7 @@
                 </address>
             </div>
             <div class="footer-wrapper">
-                <h3 class="title">Присоединяйтесь</h3>
+                <p class="title">Присоединяйтесь</p>
                 <ul class="social-links list">
                     <li class="social-links-item">
                         <a href="#" class="social-link link">
